M/M/obj/Debug/MParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.5-SNAPSHOT
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from E:\Repos\MCPC\M\M\Grammar\M.g4 by ANTLR 4.6.5-SNAPSHOT

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace M {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.5-SNAPSHOT")]
[System.CLSCompliant(false)]
public partial class MParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, Break=4, Char=5, Continue=6, Do=7, Else=8, For=9, 
		Goto=10, If=11, Inline=12, Int=13, Return=14, Void=15, While=16, LeftParen=17, 
		RightParen=18, LeftBracket=19, RightBracket=20, LeftBrace=21, RightBrace=22, 
		Less=23, LessEqual=24, Greater=25, GreaterEqual=26, LeftShift=27, RightShift=28, 
		Plus=29, PlusPlus=30, Minus=31, MinusMinus=32, Star=33, Div=34, Mod=35, 
		And=36, Or=37, AndAnd=38, OrOr=39, Xor=40, Not=41, Tilde=42, Question=43, 
		Colon=44, Semi=45, Comma=46, Assign=47, Equal=48, NotEqual=49, Dot=50, 
		Identifier=51, Filename=52, Constant=53, DigitSequence=54, StringLiteral=55, 
		Whitespace=56, Newline=57, BlockComment=58, LineComment=59;
	public const int
		RULE_calcExpression = 0, RULE_calcOperator = 1, RULE_unaryCalcOperator = 2, 
		RULE_initializerList = 3, RULE_assignmentExpression = 4, RULE_topLevelAssignmentExpression = 5, 
		RULE_typeSpecifier = 6, RULE_nestedParenthesesBlock = 7, RULE_parameterDeclarationList = 8, 
		RULE_parameterDeclaration = 9, RULE_paramterPassList = 10, RULE_parameterCallList = 11, 
		RULE_statement = 12, RULE_assignmentStatement = 13, RULE_callStatement = 14, 
		RULE_labeledStatement = 15, RULE_compoundStatement = 16, RULE_statementList = 17, 
		RULE_selectionStatement = 18, RULE_iterationStatement = 19, RULE_forCondition = 20, 
		RULE_jumpStatement = 21, RULE_compilationUnit = 22, RULE_translationUnit = 23, 
		RULE_topLevelDeclaration = 24, RULE_functionDefinition = 25, RULE_asmStatement = 26, 
		RULE_preprocessorDirective = 27;
	public static readonly string[] ruleNames = {
		"calcExpression", "calcOperator", "unaryCalcOperator", "initializerList", 
		"assignmentExpression", "topLevelAssignmentExpression", "typeSpecifier", 
		"nestedParenthesesBlock", "parameterDeclarationList", "parameterDeclaration", 
		"paramterPassList", "parameterCallList", "statement", "assignmentStatement", 
		"callStatement", "labeledStatement", "compoundStatement", "statementList", 
		"selectionStatement", "iterationStatement", "forCondition", "jumpStatement", 
		"compilationUnit", "translationUnit", "topLevelDeclaration", "functionDefinition", 
		"asmStatement", "preprocessorDirective"
	};

	private static readonly string[] _LiteralNames = {
		null, "'asm'", "'#'", "'include'", "'break'", "'char'", "'continue'", 
		"'do'", "'else'", "'for'", "'goto'", "'if'", "'inline'", "'int'", "'return'", 
		"'void'", "'while'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'<'", 
		"'<='", "'>'", "'>='", "'<<'", "'>>'", "'+'", "'++'", "'-'", "'--'", "'*'", 
		"'/'", "'%'", "'&'", "'|'", "'&&'", "'||'", "'^'", "'!'", "'~'", "'?'", 
		"':'", "';'", "','", "'='", "'=='", "'!='", "'.'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, "Break", "Char", "Continue", "Do", "Else", "For", 
		"Goto", "If", "Inline", "Int", "Return", "Void", "While", "LeftParen", 
		"RightParen", "LeftBracket", "RightBracket", "LeftBrace", "RightBrace", 
		"Less", "LessEqual", "Greater", "GreaterEqual", "LeftShift", "RightShift", 
		"Plus", "PlusPlus", "Minus", "MinusMinus", "Star", "Div", "Mod", "And", 
		"Or", "AndAnd", "OrOr", "Xor", "Not", "Tilde", "Question", "Colon", "Semi", 
		"Comma", "Assign", "Equal", "NotEqual", "Dot", "Identifier", "Filename", 
		"Constant", "DigitSequence", "StringLiteral", "Whitespace", "Newline", 
		"BlockComment", "LineComment"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "M.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public MParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class CalcExpressionContext : ParserRuleContext {
		public ITerminalNode Identifier() { return GetToken(MParser.Identifier, 0); }
		public ITerminalNode StringLiteral() { return GetToken(MParser.StringLiteral, 0); }
		public ITerminalNode Constant() { return GetToken(MParser.Constant, 0); }
		public InitializerListContext initializerList() {
			return GetRuleContext<InitializerListContext>(0);
		}
		public CalcExpressionContext[] calcExpression() {
			return GetRuleContexts<CalcExpressionContext>();
		}
		public CalcExpressionContext calcExpression(int i) {
			return GetRuleContext<CalcExpressionContext>(i);
		}
		public CalcOperatorContext calcOperator() {
			return GetRuleContext<CalcOperatorContext>(0);
		}
		public UnaryCalcOperatorContext unaryCalcOperator() {
			return GetRuleContext<UnaryCalcOperatorContext>(0);
		}
		public TypeSpecifierContext typeSpecifier() {
			return GetRuleContext<TypeSpecifierContext>(0);
		}
		public CalcExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_calcExpression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMListener typedListener = listener as IMListener;
			if (typedListener != null) typedListener.EnterCalcExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMListener typedListener = listener as IMListener;
			if (typedListener != null) typedListener.ExitCalcExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMVisitor<TResult> typedVisitor = visitor as IMVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCalcExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CalcExpressionContext calcExpression() {
		return calcExpression(0);
	}

	private CalcExpressionContext calcExpression(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		CalcExpressionContext _localctx = new CalcExpressionContext(_ctx, _parentState);
		CalcExpressionContext _prevctx = _localctx;
		int _startState = 0;
		EnterRecursionRule(_localctx, 0, RULE_calcExpression, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 76;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				State = 57; Match(Identifier);
				}
				break;

			case 2:
				{
				State = 58; Match(StringLiteral);
				}
				break;

			case 3:
				{
				State = 59; Match(Constant);
				}
				break;

			case 4:
				{
				State = 60; Match(LeftBrace);
				State = 61; initializerList(0);
				State = 62; Match(RightBrace);
				}
				break;

			case 5:
				{
				State = 64; unaryCalcOperator();
				State = 65; calcExpression(4);
				}
				break;

			case 6:
				{
				State = 67; Match(LeftParen);
				State = 68; typeSpecifier();
				State = 69; Match(RightParen);
				State = 70; calcExpression(2);
				}
				break;

			case 7:
				{
				State = 72; Match(LeftParen);
				State = 73; calcExpression(0);
				State = 74; Match(RightParen);
				}
				break;
			}
			_ctx.stop = _input.Lt(-1);
			State = 86;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 84;
					_errHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						_localctx = new CalcExpressionContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_calcExpression);
						State = 78;
						if (!(Precpred(_ctx, 5))) throw new FailedPredicateException(this, "Precpred(_ctx, 5)");
						State = 79; calcOperator();
						State = 80; calcExpression(6);
						}
						break;

					case 2:
						{
						_localctx = new CalcExpressionContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_calcExpression);
						State = 82;
						if (!(Precpred(_ctx, 3))) throw new FailedPredicateException(this, "Precpred(_ctx, 3)");
						State = 83; unaryCalcOperator();
						}
						break;
					}
					} 
				}
				State = 88;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class CalcOperatorContext : ParserRuleContext {
		public ITerminalNode Less() { return GetToken(MParser.Less, 0); }
		public ITerminalNode LessEqual() { return GetToken(MParser.LessEqual, 0); }
		public ITerminalNode Greater() { return GetToken(MParser.Greater, 0); }
		public ITerminalNode GreaterEqual() { return GetToken(MParser.GreaterEqual, 0); }
		public ITerminalNode LeftShift() { return GetToken(MParser.LeftShift, 0); }
		public ITerminalNode RightShift() { return GetToken(MParser.RightShift, 0); }
		public ITerminalNode Plus() { return GetToken(MParser.Plus, 0); }
		public ITerminalNode Minus() { return GetToken(MParser.Minus, 0); }
		public ITerminalNode Star() { return GetToken(MParser.Star, 0); }
		public ITerminalNode Div() { return GetToken(MParser.Div, 0); }
		public ITerminalNode Mod() { return GetToken(MParser.Mod, 0); }
		public ITerminalNode And() { return GetToken(MParser.And, 0); }
		public ITerminalNode Or() { return GetToken(MParser.Or, 0); }
		public ITerminalNode AndAnd() { return GetToken(MParser.AndAnd, 0); }
		public ITerminalNode OrOr() { return GetToken(MParser.OrOr, 0); }
		public ITerminalNode Xor() { return GetToken(MParser.Xor, 0); }
		public CalcOperatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_calcOperator; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMListener typedListener = listener as IMListener;
			if (typedListener != null) typedListener.EnterCalcOperator(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMListener typedListener = listener as IMListener;
			if (typedListener != null) typedListener.ExitCalcOperator(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMVisitor<TResult> typedVisitor = visitor as IMVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCalcOperator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CalcOperatorContext calcOperator() {
		CalcOperatorContext _localctx = new CalcOperatorContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_calcOperator);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Less) | (1L << LessEqual) | (1L << Greater) | (1L << GreaterEqual) | (1L << LeftShift) | (1L << RightShift) | (1L << Plus) | (1L << Minus) | (1L << Star) | (1L << Div) | (1L << Mod) | (1L << And) | (1L << Or) | (1L << AndAnd) | (1L << OrOr) | (1L << Xor))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UnaryCalcOperatorContext : ParserRuleContext {
		public ITerminalNode PlusPlus() { return GetToken(MParser.PlusPlus, 0); }
		public ITerminalNode MinusMinus() { return GetToken(MParser.MinusMinus, 0); }
		public ITerminalNode Tilde() { return GetToken(MParser.Tilde, 0); }
		public ITerminalNode Not() { return GetToken(MParser.Not, 0); }
		public ITerminalNode And() { return GetToken(MParser.And, 0); }
		public UnaryCalcOperatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unaryCalcOperator; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMListener typedListener = listener as IMListener;
			if (typedListener != null) typedListener.EnterUnaryCalcOperator(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMListener typedListener = listener as IMListener;
			if (typedListener != null) typedListener.ExitUnaryCalcOperator(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMVisitor<TResult> typedVisitor = visitor as IMVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnaryCalcOperator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UnaryCalcOperatorContext unaryCalcOperator() {
		UnaryCalcOperatorContext _localctx = new UnaryCalcOperatorContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_unaryCalcOperator);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PlusPlus) | (1L << MinusMinus) | (1L << And) | (1L << Not) | (1L << Tilde))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InitializerListContext : ParserRuleContext {
		public ITerminalNode Constant() { return GetToken(MParser.Constant, 0); }
		public InitializerListContext initializerList() {
			return GetRuleContext<InitializerListContext>(0);
		}
		public InitializerListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_initializerList; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMListener typedListener = listener as IMListener;
			if (typedListener != null) typedListener.EnterInitializerList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMListener typedListener = listener as IMListener;
			if (typedListener != null) typedListener.ExitInitializerList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMVisitor<TResult> typedVisitor = visitor as IMVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInitializerList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InitializerListContext initializerList() {
		return initializerList(0);
	}

	private InitializerListContext initializerList(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		InitializerListContext _localctx = new InitializerListContext(_ctx, _parentState);
		InitializerListContext _prevctx = _localctx;
		int _startState = 6;
		EnterRecursionRule(_localctx, 6, RULE_initializerList, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 94; Match(Constant);
			}
			_ctx.stop = _input.Lt(-1);
			State = 101;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new InitializerListContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_initializerList);
					State = 96;
					if (!(Precpred(_ctx, 1))) throw new FailedPredicateException(this, "Precpred(_ctx, 1)");
					State = 97; Match(Comma);
					State = 98; Match(Constant);
					}
					} 
				}
				State = 103;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class AssignmentExpressionContext : ParserRuleContext {
		public ITerminalNode Identifier() { return GetToken(MParser.Identifier, 0); }
		public CalcExpressionContext calcExpression() {
			return GetRuleContext<CalcExpressionContext>(0);
		}
		public TypeSpecifierContext typeSpecifier() {
			return GetRuleContext<TypeSpecifierContext>(0);
		}
		public AssignmentExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignmentExpression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMListener typedListener = listener as IMListener;
			if (typedListener != null) typedListener.EnterAssignmentExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMListener typedListener = listener as IMListener;
			if (typedListener != null) typedListener.ExitAssignmentExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMVisitor<TResult> typedVisitor = visitor as IMVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignmentExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentExpressionContext assignmentExpression() {
		AssignmentExpressionContext _localctx = new AssignmentExpressionContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_assignmentExpression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Char) | (1L << Int) | (1L << Void))) != 0)) {
				{
				State = 104; typeSpecifier();
				}
			}

			State = 107; Match(Identifier);
			State = 108; Match(Assign);
			State = 109; calcExpression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TopLevelAssignmentExpressionContext : ParserRuleContext {
		public TypeSpecifierContext typeSpecifier() {
			return GetRuleContext<TypeSpecifierContext>(0);
		}
		public ITerminalNode Identifier() { return GetToken(MParser.Identifier, 0); }
		public CalcExpressionContext calcExpression() {
			return GetRuleContext<CalcExpressionContext>(0);
		}
		public TopLevelAssignmentExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_topLevelAssignmentExpression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMListener typedListener = listener as IMListener;
			if (typedListener != null) typedListener.EnterTopLevelAssignmentExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMListener typedListener = listener as IMListener;
			if (typedListener != null) typedListener.ExitTopLevelAssignmentExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMVisitor<TResult> typedVisitor = visitor as IMVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTopLevelAssignmentExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TopLevelAssignmentExpressionContext topLevelAssignmentExpression() {
		TopLevelAssignmentExpressionContext _localctx = new TopLevelAssignmentExpressionContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_topLevelAssignmentExpression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111; typeSpecifier();
			State = 112; Match(Identifier);
			State = 113; Match(Assign);
			State = 114; calcExpression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeSpecifierContext : ParserRuleContext {
		public TypeSpecifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeSpecifier; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMListener typedListener = listener as IMListener;
			if (typedListener != null) typedListener.EnterTypeSpecifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMListener typedListener = listener as IMListener;
			if (typedListener != null) typedListener.ExitTypeSpecifier(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMVisitor<TResult> typedVisitor = visitor as IMVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeSpecifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeSpecifierContext typeSpecifier() {
		TypeSpecifierContext _localctx = new TypeSpecifierContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_typeSpecifier);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Char) | (1L << Int) | (1L << Void))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NestedParenthesesBlockContext : ParserRuleContext {
		public NestedParenthesesBlockContext[] nestedParenthesesBlock() {
			return GetRuleContexts<NestedParenthesesBlockContext>();
		}
		public NestedParenthesesBlockContext nestedParenthesesBlock(int i) {
			return GetRuleContext<NestedParenthesesBlockContext>(i);
		}
		public NestedParenthesesBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_nestedParenthesesBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMListener typedListener = listener as IMListener;
			if (typedListener != null) typedListener.EnterNestedParenthesesBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMListener typedListener = listener as IMListener;
			if (typedListener != null) typedListener.ExitNestedParenthesesBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMVisitor<TResult> typedVisitor = visitor as IMVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNestedParenthesesBlock(this);
			else return visitor.VisitChildren(this);
		}
	}
